# croissant

./: .gitignore  README.md  package.json  pnpm-workspace.yaml
client/: .gitignore  Cargo.toml  build.bash  package.json  rust-toolchain.toml
client/src/: lib.rs  utils.rs
croissant-web/: Cargo.toml  Dioxus.toml  tailwind.css
croissant-web/assets/: tailwind.css
croissant-web/src/: main.rs
kuma/: package.json
kuma/public/: manifest.json
signer/: package.json  tsconfig.build.json  tsconfig.json
signer/src/: index.ts
test/: index.html  index2.html  indexr.html  package-lock.json  package.json  vite.config.js
wasm-client/: .gitignore  Cargo.toml  build.bash  package.json  tsconfig.json
wasm-client/src/: faucet.rs  index.ts  lib.rs  storage.rs  utils.rs  wallet.rs
wasm-client/src/chain/: mod.rs
wasm-client/src/signer/: PrivateKey.ts  index.ts  mod.rs
web/: .env  bun.lockb  extension.vite.config.js  index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts  wallet.json
web/public/: manifest.json
web/src/: App.tsx  MessageProvider.tsx  index.css  input.css  main.tsx  walletTypes.ts  window.d.ts
web/src/approval/: ApprovalPopup.tsx  index.html  index.tsx
web/src/background/: index.ts
web/src/background/offscreen/: index.html  offscreen.ts
web/src/components/: BottomDrawer.tsx  HomePage.tsx  Loading.tsx  Menu.tsx  NavBar.tsx  SettingsPage.tsx  WalletCard.tsx  WalletCardDemo.tsx  WalletFunction.tsx  Welcome.tsx  WelcomePage.tsx
web/src/components/Transfer/: TransferModal.tsx
web/src/connect_popup/: index.html  index.ts
web/src/content/: index.ts  injected.ts
web/src/pages/: HomePage.tsx  SettingsPage.tsx  WelcomePage.tsx
web/src/popup/: index.html  index.tsx
web/src/store/: WalletProvider.tsx  wallet.ts
web/src/utils/: CheckWalletExists.ts  format.ts
web/src/wallet/: approvalManager.ts  clientManager.ts  index.ts  message.guard.ts  message.ts  walletApi.ts  walletManager.ts  wasmManager.ts
